--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,17 @@
 version: '3'
 services:
-  # app:
-  #   container_name: 'node_mongo_app'
-  #   restart: always
-  #   build: .
-  #   ports: 
-  #     - "8080:8000"
-  #   links:
-  #     - mongo
+  app:
+    container_name: 'node_mongo_app'
+    restart: always
+    build: .
+    ports: 
+      - "8080:8000"
+    links:
+      - mongo
   mongo:
     image: mongo
     container_name: mongo
     restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: sandip
     volumes:
       - './dockervolume/mongodb:/data/db'
     ports:
